[tool.poetry]
name = "Redisamp"
version = "0.1.1"
description = "A Redis UI in your terminal"
authors = ["Eli Cohen <amihai.cohen@gmail.com>"]
keywords = ["redis", "tui", "redis-client", "redisamp", "redis-ui", "textual"]
homepage = "https://github.com/elicore/redisamp"
repository = "https://github.com/elicore/redisamp"
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
redisamp = "redisamp.main:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
redis = "^5.0.0"
textual = {extras = ["dev"], version = "^0.37.0"}
walrus = "^0.9.2"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = ">=0.0.290,<0.1.4"
textual-dev = "^1.1.0"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
